# burst-pool

./: Cargo.toml  README.md  benches.gnuplot  lib.rs
benches/: bench.rs  bench_burst_chan.rs  bench_burst_pool.rs  bench_jobsteal.rs  bench_mpsc.rs  bench_parking_lot.rs  bench_scoped_threadpool.rs  bench_spmc.rs  bench_threadpool.rs  benches.gnuplot  burst_chan.rs  channels.rs  histogram.rs  old_bench.rs  pipe_ring.rs  settings.rs  spmc.rs  stats.rs  unpark.rs  unpark_parkinglot.rs
benches/old/: bench_deque.rs  bench_jobsteal.rs  bench_unpark_worst.rs  histogram.rs  pipe_fanout.rs
burst-chan/: Cargo.toml  lib.rs
src/: lib.rs
tests/: basic.rs  channels.rs  histogram.rs  socket.rs
