[package]
name = "burst-pool"
version = "0.3.1"
authors = ["Alex Sayers <alex.sayers@gmail.com>"]
description = "A thread pool optimised for bursts of activity"
documentation = "https://docs.rs/burst-pool/"
repository = "https://github.com/asayers/burst-pool"
readme = "README.md"
keywords = ["threadpool"]
license = "MIT OR Apache-2.0"
exclude = ["histogram.png"]

[lib]
name = "burst_pool"
path = "lib.rs"

[dependencies]
log = "0.3"

[dev-dependencies]
deque = "0.3.2"
env_logger = "0.4.3"
jobsteal = "0.5.1"
lazy_static = "0.2.9"
lossyq = "0.1.19"
mio = "0.6.10"
parking_lot_core = "0.2.6"
pbr = "1.0.0"
rand = "0.3.17"
rb = "0.2.0"
scoped_threadpool = "0.1.8"
spmc = "0.2.2"
threadpool = "1.7.0"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
